--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,20 @@ body {
     display: flex;
 }
 
-.anilog__submit {
+.anilog__login {
+    color: #000;
+    font-size: 2.2rem;
+    font-weight: bolder;
+    letter-spacing: 2px;
+    width: 100%;
+    padding-block: 1rem;
+    border-radius: 3rem;
+    animation: col 2s linear infinite;
+    cursor: pointer;
+    border: none;
+}
+
+.anilog__signup {
     color: #000;
     font-size: 2.2rem;
     font-weight: bolder;
